--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dnspython==1.16.0
 email-validator==1.1.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.24.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-RESTful==0.3.8
@@ -19,6 +20,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 Pillow==7.1.2
 pycparser==2.19
+PyJWT==1.7.1
 pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.18
