--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
 aniso8601==8.0.0
-bcrypt==3.1.7
+bcrypt==3.2.0
 blinker==1.4
 cffi==1.12.3
-click==7.1.2
+click==8.0.3
 dnspython==1.16.0
-email-validator==1.1.1
-Flask==1.1.2
+email-validator==1.1.3
+Flask==2.0.2
 Flask-Bcrypt==0.7.1
-Flask-JWT-Extended==3.24.1
+Flask-JWT-Extended==4.3.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.3
-Flask-WTF==0.14.3
-gunicorn==19.9.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+gunicorn==20.1.0
 idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Pillow==7.1.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+Pillow==8.4.0
 pycparser==2.19
-PyJWT==1.7.1
+PyJWT==2.3.0
 pytz==2020.1
 six==1.15.0
-SQLAlchemy==1.3.18
-Werkzeug==1.0.1
-WTForms==2.3.1
+SQLAlchemy==1.4.28
+Werkzeug==2.0.2
+WTForms==3.0.0
